--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     />
   </head>
   <body>
-    <h1 class="title"><img src="./logo.png" /></h1>
+    <div class="nav">
+      <h1 class="title"><img src="./logo.png" /></h1>
+      <a href="blog.html">Blog</a>
+    </div>
     <div id="show-time">0 seconds</div>
 
     <div class="box-container">
