--- a/blog.html
+++ b/blog.html
@@ -5,12 +5,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
   </head>
   <body>
-    <div class="nav">
+    <header class="nav">
       <h1 class="title"><img src="./logo.png" /></h1>
       <a href="index.html">Home</a>
-    </div>
+    </header>
+    <main class="container">
+      <div class="bg-light text-dark rounded-1 p-2 my-3 col-12">
+        <h1>Different Between LocalStorage and SessionStorage</h1>
+        <table
+          class="table table-striped table-hover table-borderless table-primary align-middle"
+        >
+          <thead class="table-light">
+            <tr>
+              <th>Local Storage</th>
+              <th>Session Storage</th>
+            </tr>
+          </thead>
+          <tbody class="table-group-divider">
+            <tr class="table-primary">
+              <td scope="row">
+                The storage capacity of local storage is 5MB/10MB
+              </td>
+              <td>The storage capacity of session storage is 5MB</td>
+            </tr>
+            <tr class="table-primary">
+              <td scope="row">
+                As it is not session-based, it must be deleted via javascript or
+                manually
+              </td>
+              <td>
+                It’s session-based and works per window or tab. This means that
+                data is stored only for the duration of a session, i.e., until
+                the browser (or tab) is closed
+              </td>
+            </tr>
+            <tr class="table-primary">
+              <td scope="row">The client can only read local storage</td>
+              <td>The client can only read local storage</td>
+            </tr>
+            <tr class="table-primary">
+              <td scope="row">There is no transfer of data to the server</td>
+              <td>There is no transfer of data to the server</td>
+            </tr>
+            <tr class="table-primary">
+              <td scope="row">There are fewer old browsers that support it</td>
+              <td>There are fewer old browsers that support it</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="bg-light text-dark rounded-lg col-12">
+        <h1>Different Between Global Scope and Block Scope</h1>
+        <p></p>
+      </div>
+      <div class="bg-light text-dark rounded-lg col-12">
+        <h1>JavaScript Event Loop</h1>
+        <p></p>
+      </div>
+      <div class="bg-light text-dark rounded-lg col-12">
+        <h1>How Many way i can get undefiend in JavaScript</h1>
+        <p></p>
+      </div>
+    </main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
