--- a/blog.html
+++ b/blog.html
@@ -64,9 +64,48 @@
           </tbody>
         </table>
       </div>
-      <div class="bg-light text-dark rounded-lg col-12">
+      <div class="bg-light text-dark rounded-1 p-2 mb-2 col-12">
         <h1>Different Between Global Scope and Block Scope</h1>
-        <p></p>
+        <h1>Global Scope</h1>
+        <p>
+          Variables declared Globally (outside any function) have Global Scope.
+          Global variables can be accessed from anywhere in a JavaScript
+          program. Variables declared with var, let and const are quite similar
+          when declared outside a block. They all have Global Scope:
+          <br />
+          <code class="text-warning">
+            var x = 2; // Global scope
+            <br />
+            let x = 2; // Global scope
+            <br />
+            const x = 2; // Global scope
+          </code>
+        </p>
+        <h1>Block Scope</h1>
+        <p>
+          The block scope can be defined as the scope of the variables inside
+          the curly brackets {}
+          <br />
+          <code>
+            { <br />
+            let x = 2;
+            <br />
+            }
+            <br />// x can NOT be used here
+          </code>
+          <br />
+          Variables declared with the var keyword can NOT have block scope.
+          Variables declared inside a { } block can be accessed from outside the
+          block.
+          <br />
+          <code>
+            { <br />
+            var x = 2;
+            <br />
+            }
+            <br />// x can be used here
+          </code>
+        </p>
       </div>
       <div class="bg-light text-dark rounded-lg col-12">
         <h1>JavaScript Event Loop</h1>
